k8s/jms-gua.yml
# jumpserver guacamole服务
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guacamole
  namespace: jumpserver
  labels:
    k8s-app: guacamole
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: guacamole
  template:
    metadata:
      name: guacamole
      labels:
        k8s-app: guacamole
    spec:

      imagePullSecrets:         # docker仓库认证密钥
        - name: harborsecret
      containers:
        - name: guacamole
          image: jumpserver/jms_guacamole:1.5.8
          tty: true
          resources:               
            requests:
              cpu: 0.5
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1024Mi
          imagePullPolicy: IfNotPresent
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10 
            timeoutSeconds: 3        
            periodSeconds: 30        
            successThreshold: 1      
            failureThreshold: 3     
          readinessProbe:            
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10  
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1      
            failureThreshold: 3      
          securityContext:
            privileged: false    
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler   
  strategy:
    type: RollingUpdate        
    rollingUpdate:
      maxUnavailable: 25%       
      maxSurge: 25%            
  revisionHistoryLimit: 10     
  progressDeadlineSeconds: 600  
status:
  observedGeneration: 5
  replicas: 2
  updatedReplicas: 2
  readyReplicas: 2
  availableReplicas: 2

---
kind: Service
apiVersion: v1
metadata:
  name: guacamole
  namespace: jumpserver
  labels:
    k8s-app: guacamole
spec:
  ports:
    - name: guacamole-8080
      protocol: TCP
      port: 8080
      targetPort: 8080


  selector:
    k8s-app: guacamole
  type: ClusterIP
  sessionAffinity: None
