k8s/jms-koko.yml
# jumpserver KOKO服务
kind: Deployment
apiVersion: apps/v1
metadata:
  name: koko
  namespace: jumpserver
  labels:
    k8s-app: koko
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: koko
  template:
    metadata:
      name: koko
      labels:
        k8s-app: koko
    spec:

      imagePullSecrets:           
        - name: harborsecret
      containers:
        - name: koko
          image: jumpserver/jms_koko:1.5.8
          tty: true

          resources:               
            requests:
              cpu: 0.5
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1024Mi
          imagePullPolicy: IfNotPresent
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 10 
            timeoutSeconds: 3        
            periodSeconds: 30        
            successThreshold: 1      
            failureThreshold: 3     
          readinessProbe:            
            tcpSocket:
              port: 5000
            initialDelaySeconds: 10  
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1      
            failureThreshold: 3      
          securityContext:
            privileged: false    
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler   
  strategy:
    type: RollingUpdate        
    rollingUpdate:
      maxUnavailable: 25%       
      maxSurge: 25%            
  revisionHistoryLimit: 10     
  progressDeadlineSeconds: 600  
status:
  observedGeneration: 5
  replicas: 2
  updatedReplicas: 2
  readyReplicas: 2
  availableReplicas: 2

---
kind: Service
apiVersion: v1
metadata:
  name: koko
  namespace: jumpserver
  labels:
    k8s-app: koko
spec:
  ports:
    - name: koko-5000
      protocol: TCP
      port: 5000
      targetPort: 5000
    - name: koko-2222
      protocol: TCP
      port: 22222
      targetPort: 2222

  selector:
    k8s-app: koko
  type: ClusterIP
  sessionAffinity: None
