k8s/mysql-endpoint.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-jms
  namespace: jumpserver
spec:
  ports:            # 该端口号需与jms-core.yml中的DB_PORT一致
    - port: 3306
---
kind: Endpoints
apiVersion: v1
metadata:
  name: mysql-jms
  namespace: jumpserver
subsets:
  - addresses:
      - ip: 192.168.1.10        #实体服务hostname
    ports:
      - port: 3306              #实体服务port
